TODO:lessons,card,bookings
Signed-off-by: leozhang <it@tparts.com>

--- a/miniprogram/pages/index/index.wxml
+++ b/miniprogram/pages/index/index.wxml
@@ -4,11 +4,11 @@
             <view class="navigation-title" style="font-size:{{navigationTitleFontSize}}px;line-height:{{navigationTitleFontSize}}px;">
                 {{app.globalData.title}}
             </view>
-            <swiper style="font-size:{{navigationSubTitleFontSize}}px;height:{{navigationSubTitleFontSize*1.5}}px" class="swiper" vertical="true" circular="true" duration="300" autoplay="true" interval="3000">
+            <!-- <swiper style="font-size:{{navigationSubTitleFontSize}}px;height:{{navigationSubTitleFontSize*1.5}}px" class="swiper" vertical="true" circular="true" duration="300" autoplay="true" interval="3000">
                 <swiper-item>{{weather}}</swiper-item>
                 <swiper-item>{{date}}</swiper-item>
                 <swiper-item>{{bj}}</swiper-item>
-            </swiper>
+            </swiper> -->
         </view>
     </view>
     <swiper class="photo-swiper" indicator-dots="true" indicator-active-color="#fff" autoplay circular>
